# pd-trainer

./: README.md  pyproject.toml
pd_trainer/: trainer.py
src/pd_trainer/: __main__.py  trainer.py
