[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-trainer"
version = "0.1.0"
description = "Prompt Distillation trainer"
authors = [{ name = "Siyu Long", email = "i@longern.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "trl>=0.16.0"
]

[tool.setuptools]
py-modules = ["pd_trainer"]
